unpackaged/main/default/objects/E2CP__Variation__c/fields/E2CP__Active__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if this Variation should be evaluated.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>