unpackaged/main/default/objects/E2CP__Variation__c/fields/E2CP__Logic__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Logic__c</fullName>
    <description>Custom Criteria Logic.</description>
    <label>Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>