unpackaged/main/default/objects/E2CP__Variation__c/fields/E2CP__Order__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Order__c</fullName>
    <description>Variation evaluation order of precedence.</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>