unpackaged/main/default/objects/E2CP__Variation__c/fields/E2CP__Use_Criteria__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Use_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if this Variation is using field criteria.</description>
    <label>Use Criteria</label>
    <type>Checkbox</type>
</CustomField>